# photo-studio

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: pull_request.yml  release.yml
photo-api/: .env.example  Cargo.toml  README.md
photo-api/src/: connection.rs  main.rs  utils.rs
photo-api/src/auth/: google.rs  mod.rs  token.rs  traits.rs
photo-api/src/aws/: s3.rs
photo-api/src/conduit/: albums.rs  book_me.rs  mod.rs  photos.rs  users.rs
photo-api/src/handlers/: albums.rs  book_me.rs  mod.rs  photos.rs  users.rs  utils.rs
photo-api/src/handlers/auth/: google.rs  mod.rs
photo-api/src/middlewares/: cors.rs
photo-core/: .env.example  Cargo.toml  README.md
photo-core/migrations/2020-09-14-183518_initial_tables/: down.sql  up.sql
photo-core/migrations/2020-09-29-214249_remove_name_description/: down.sql  up.sql
photo-core/migrations/2020-10-02-162908_favorite_photos/: up.sql
photo-core/migrations/2020-11-01-202651_lifestyle_album/: down.sql  up.sql
photo-core/migrations/2020-11-02-101858_book_me/: down.sql  up.sql
photo-core/migrations/2020-11-04-122924_image_metadata/: down.sql  up.sql
photo-core/src/: connection.rs  lib.rs  models.rs  schema.rs
photo-core/src/conduit/: mod.rs  users.rs
photo-core/src/custom_migrations/: mod.rs
photo-core/src/helpers/: uuid.rs
photo-management/: .env.example  craco.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
photo-management/public/: index.html  manifest.json
photo-management/src/: App.css  App.tsx  index.tsx
photo-management/src/@types/Global/: index.d.ts
photo-management/src/@types/contrast/: index.d.ts
photo-management/src/api/: index.ts
photo-management/src/auth/: index.ts
photo-management/src/components/AddPhoto/: index.tsx  styles.css
photo-management/src/components/Album/: index.tsx
photo-management/src/components/AlbumOpened/: Photo.tsx  index.tsx  styles.css
photo-management/src/components/Authentication/: index.tsx
photo-management/src/components/Header/: index.tsx  styles.css
photo-management/src/components/PhotoGrid/: index.tsx  styles.css
photo-management/src/components/Root/: index.tsx
photo-management/src/store/: createStore.ts  index.ts  localStorageMiddleware.ts  rootReducer.ts  rootSaga.ts
photo-management/src/store/albums/: actions.ts  reducer.ts  sagas.ts  selectors.ts  types.ts
photo-management/src/store/auth/: actions.ts  reducer.ts  sagas.ts  selectors.ts  types.ts
photo-management/src/store/bookMe/: actions.ts  reducer.ts  sagas.ts  selectors.ts  types.ts
photo-management/src/utils/: chameleon.ts  env.ts  netlify.ts  types.ts
photo-management/src/views/Album/: index.tsx  styles.css
photo-management/src/views/Albums/: index.tsx  styles.css
photo-management/src/views/Authenticate/: index.tsx
photo-management/src/views/BookMe/: index.tsx  styles.css
photo-management/src/views/Home/: index.tsx
photo-management/src/views/LoginGoogle/: index.tsx  styles.css
scripts/: build.sh  build_in_github.sh
