[package]
name = "photo-core"
version = "0.1.0"
authors = ["Victor Quiroz <victorhqc@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"]}
diesel = { version = "1.4", features = ["sqlite", "r2d2", "chrono", "extras"] }
dotenv = "0.15"
futures = "0.1"
http = "0.2.1"
hyper = "0.13.7"
log = "0.4"
pretty_env_logger = "0.4"
r2d2 = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }

[target."cfg(linux)".dependencies]
openssl = "*"